--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LisaDieterle/pirats.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LisaDieterle/pirats/issues"
+  },
+  "homepage": "https://github.com/LisaDieterle/pirats#readme"
 }
